--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,8 +1,18 @@
+a:hover{
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+input:focus {
+    outline:none;
+}
 .leftbar__container{
     background-color:#fff;
     position:fixed;
     z-index:2;
-    max-width:15%;
+    max-width:220px;
     height:100vh;
 }
 
@@ -10,21 +20,109 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top:20px;
+    margin-bottom:35px;
+    width:70px;
+    height:auto;
 }
-.leftbar__search{
+.leftbar__searchform{
+  position:relative;
+
+}
+
+
+.leftbar__search-input{
+    position:absolute;
+    left:0;
     width: 100%;
     border: 1px solid blue;
-    border radius;
-    border-radius:16px;
+    border-radius: 80px;
     background-color:transparent;
-}
-input[type="search"]{
     text-transform: none;
     padding:2px 0px 2px 10px;
+
+}
+
+
+.leftbar__search-input::placeholder{
+    color: #7976df;
+}
+
+
+.leftbar__user{
+    margin-top:100px;
+
+}
+
+.leftbar__user a{
+    color:#282828;
+}
+
+.leftbar__paragraph{
+    margin-top:20px;
+    margin-bottom:30px;
+    color:#282828;
+    text-align: left;
+    font-size:0.9em;
+}
+
+.leftbar__input-form{
+    background-color: #4743d6;
+    color:white;
+    text-transform: uppercase;
+    padding:5px 15px 5px 15px;
+    border:none;
+    font-weight: 600;
+    font-style: italic;
+    transition:all 400ms;
+    margin-bottom:25px;
+}
+
+audio{
+
+}
+
+.leftbar__input-form:hover{
+    background-color: #6e6ae2;
+    color:white;
+}
+
+.leftbar__loupe{
+    position: absolute;
+    right: 7px;
+    border: none;
+    background: transparent;
+    width: 16px;
+    height: 16px;
+    top: 3px;
+    transition:all 400ms ease-in-out;
+
+}
+
+
+.leftbar__loupe:hover{
+    opacity: 0.7;
+
+}
+
+
+.leftbar__icons{
+    width:25px;
+    height:25px;
+}
+
+.leftbar__ul{
+    padding:0;
+}
+.leftbar__ul a{
+    margin-left:25px;
+}
+.leftbar__li{
+    padding-top:25px;
 }
 
 .leftbar__content{
-    background-color:red;
+
     position:relative;
     width:80%;
     margin:0 auto;
@@ -32,3 +130,6 @@ input[type="search"]{
     z-index:3;
 }
 
+audio{
+    overflow: hidden;
+}
