css home page (layout) mise en page du full.blade

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,6 +5,11 @@ a:hover{
 ul {
     list-style: none;
 }
+
+.container__c{
+    width:100%;
+    background-color: red;
+}
 input:focus {
     outline:none;
 }
