--- a/public/css/home.css
+++ b/public/css/home.css
@@ -138,3 +138,98 @@ audio{
 audio{
     overflow: hidden;
 }
+
+
+/*
+Ajout de saad leftplay*/
+
+
+.leftbar__playlists {
+    background-color:green;
+    position:fixed;
+    z-index:1;
+    max-width:220px;
+    height:100vh;
+
+}
+
+.btn-playlists:hover {
+    color: red;
+}
+
+
+/*animations*/
+
+.menu-apparition {
+    animation: animApparition 1000ms linear both;
+}
+
+.menu-disparition {
+    animation: animDisparition 1000ms linear both;
+}
+
+@keyframes animApparition {
+    0% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+    }
+    3.5% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 81.82, 0, 0, 1);
+    }
+    6.91% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 138.761, 0, 0, 1);
+    }
+    10.31% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 176.781, 0, 0, 1);
+    }
+    13.71% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 200.38, 0, 0, 1);
+    }
+    20.52% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 220.739, 0, 0, 1);
+    }
+    27.33% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 224.292, 0, 0, 1);
+    }
+    47.35% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 220.577, 0, 0, 1);
+    }
+    67.37% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 219.967, 0, 0, 1);
+    }
+    100% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 220, 0, 0, 1);
+    }
+}
+
+@keyframes animDisparition {
+    0% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 220, 0, 0, 1);
+    }
+    3.5% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 138.18, 0, 0, 1);
+    }
+    6.91% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 81.239, 0, 0, 1);
+    }
+    10.31% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 43.219, 0, 0, 1);
+    }
+    13.71% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 19.62, 0, 0, 1);
+    }
+    20.52% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.739, 0, 0, 1);
+    }
+    27.33% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -4.292, 0, 0, 1);
+    }
+    47.35% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.577, 0, 0, 1);
+    }
+    67.37% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0.033, 0, 0, 1);
+    }
+    100% {
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+    }
+}
