--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -78,3 +78,15 @@
     left:-80px;
 
 }
+
+.menu__search-title{
+    font-size: 1em;
+    font-weight:bold;
+
+}
+
+.menu__search-content{
+    margin-left:30px;
+    margin-top:70px;
+
+}
