--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -8,6 +8,7 @@
 
 }
 
+
 .menu-apparition {
     animation: animApparition 1000ms linear both;
 }
@@ -78,6 +79,16 @@
     left:-80px;
 
 }
+
+.menu__upload {
+    background-color:white;
+    position:fixed;
+    width:300px;
+    height:100vh;
+    top:0;
+    left:-80px;
+}
+
 
 .menu__search-title{
     font-size: 1em;
