--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -79,6 +79,16 @@
 
 }
 
+.menu__upload{
+    background-color:white;
+    position:fixed;
+    width:300px;
+    height:100vh;
+    top:0;
+    left:-80px;
+
+}
+
 .menu__search-title{
     font-size: 1em;
     font-weight:bold;
