--- a/public/css/home.css
+++ b/public/css/home.css
@@ -142,3 +142,16 @@ audio{
 audio{
     overflow: hidden;
 }
+
+
+.home__nouveautes-hover {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background: rgba(255,255,255,0.5);
+}
+
+.home__nouveautes-hover img {
+    height: 25px;
+    fill: red;
+}
