intégration accueil intégration utilisateur ajout page profile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -30,10 +30,13 @@ margin-top:50px;
 }
 
 .home__container h2{
-    margin-left:40px;
     margin-top:0!important;
     color:white;
     padding-top:40px;
+}
+
+.home__new-title{
+    margin-left:40px;
 }
 
 .home__background{
