--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,8 +2,41 @@ a:hover{
     text-decoration: none;
 }
 
-ul {
+ul,li,p,span,input {
     list-style: none;
+    font-family:'Hind', sans-serif;
+}
+
+
+h1,h2,h3{
+    font-family:'Ubuntu', sans-serif;
+
+}
+
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.02);
+    border:none;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 .container__text{
@@ -20,9 +53,13 @@ input:focus {
     top:0;
     width:235px;
     height:100vh;
+    -webkit-box-shadow: -2px -7px 51px -2px rgba(0,0,0,0.03);
+    -moz-box-shadow: -2px -7px 51px -2px rgba(0,0,0,0.03);
+    box-shadow: -2px -7px 51px -2px rgba(0,0,0,0.03);
 }
 
 .leftbar__logo{
+    cursor:pointer;
     display: block;
     margin-left: auto;
     margin-right: auto;
