--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -89,13 +89,86 @@
 
 }
 
-
-.menu__upload input {
+.menu__upload input[type=text] {
     border: none;
     border-bottom: 1px blue solid;
     transition: 200ms all ease-in-out;
     padding: 8px 0px;
     margin: 10px 0px;
+    width: 89%;
+}
+
+.file__container {
+    overflow: hidden;
+    position: relative;
+    padding-top: 5px;
+    padding-left: 35px;
+    width: 110px;
+    height: 28px;
+    background: #4743d6;
+    font: bold 13px Arial;
+    color: #fff;
+    transition: 400ms all;
+}
+
+.file__container:hover {
+    background:#56aebc;
+}
+
+.file__container2:hover {
+    background:#56aebc;
+}
+
+.file__container [type=file] {
+    cursor: pointer;
+    display: block;
+    background-color:#4743d6;
+    min-height: 100%;
+    min-width: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
+}
+
+.file__container2 {
+    overflow: hidden;
+    position: relative;
+    padding-top: 5px;
+    padding-left: 35px;
+    width: 110px;
+    height: 28px;
+    background: #4743d6;
+    font: bold 13px Arial;
+    color: #fff;
+    margin-left: 7px;
+    transition: 400ms all;
+}
+
+.file__container2 [type=file] {
+
+    cursor: pointer;
+    display: block;
+    background-color:#4743d6;
+    min-height: 100%;
+    min-width: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
+}
+
+input[type=submit]{
+    background: linear-gradient(to right, rgba(188,78,156,1) 0%,rgba(188,78,156,1) 34%,rgba(248,7,89,1) 100%);
+    color: white;
+    padding: 2px 83px;
+    border: none;
+    transition:400ms all;
+}
+input[type=submit]:hover{
+    opacity:0.8;
 }
 
 .menu__upload input:focus {
@@ -106,7 +179,6 @@
     color: blue;
 }
 
-
 .menu__search-title{
     font-size: 1em;
     font-weight:bold;
@@ -114,7 +186,7 @@
 }
 
 .menu__main-content{
-    margin-left:30px;
+    margin-left:40px;
     margin-top:70px;
 
 }
