--- a/public/css/utilisateur.css
+++ b/public/css/utilisateur.css
@@ -6,12 +6,16 @@
 .main__container{
     margin-left:235px;
 }
+.user__name-sub{
+    margin-top:40px;
+    margin-bottom:30px;
+    text-align:center;
+}
 .user__name{
-    margin-top:0;
+    font-size:1.7em;
     text-transform:capitalize;
     color:white;
-    text-align:center;
-
+    display:inline;
 }
 
 .user__follow{
@@ -76,7 +80,6 @@
 .user__titres {
     width: 70%;
 }
-
 .user__titres-container li::first-letter{
     text-transform: capitalize;
 }
@@ -98,6 +101,7 @@ display:grid;
     grid-auto-rows: auto;
     grid-column-gap: 0;
     grid-row-gap: 0;
+    width:70%;
     align-items:center;
 
 }
@@ -114,7 +118,7 @@ display:grid;
 
 .user__titres-fieldset{
     border-top:1px solid grey;
-    width:100%;
+    width:70%;
     margin-bottom:15px;
 }
 .user__chanson-img{
@@ -126,12 +130,15 @@ display:grid;
     margin-bottom:10px;
     border-radius: 6px;
 }
-.user__playlists {
+.user__playlists{
+  position:absolute;
+    left:78%;
+    top:23%;
 }
 .user__playlists-container{
     padding-left:0;
     display:grid;
-    grid-template-columns:1fr;
+    grid-template-columns:1fr
     grid-auto-rows: auto;
     grid-column-gap: 0;
     grid-row-gap: 0;
@@ -146,6 +153,16 @@ display:grid;
 .user__playlist-nbr{
     display:inline-block;
     font-size:0.4em;
+}
+
+.user__avatar {
+    display:block;
+    margin:0 auto;
+    width:150px;
+    height:150px;
+    border-radius:50%;
+
+
 }
 
 #all {
