--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -4,6 +4,8 @@
     width: 100%;
     height: 100vh;
     background-position: 50% 72%;
+    position:fixed;
+    top:0;
 
 }
 
@@ -15,8 +17,8 @@
 
 .registration__back{
     text-transform: uppercase;
-    padding-top:100px;
-    margin-bottom:80px;
+    padding-top:220px;
+    margin-bottom:40px;
 }
 .registration__back a {
     color: #d75a4a;
@@ -60,4 +62,4 @@ margin-bottom: 20px;
     padding:4px 25px 4px 25px;
     border:#d75a4a 1px solid;
 }
-input {text-transform: uppercase;}
+
